--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -1,11 +1,7 @@
 {
-  "site": { "name": "Restaurantly" },
-
-  "topbar": {
-    "email": "contact@example.com",
-    "phone": "+1 5589 55488 55"
+  "site": {
+    "name": "BESPOKE CUISINE Inc"
   },
-
   "nav": {
     "home": "Home",
     "about": "About",
@@ -14,32 +10,17 @@
     "events": "Events",
     "chefs": "Chefs",
     "gallery": "Gallery",
-    "contact": "Contact",
-    "book": "Book a Table",
-
-    "dropdown": "Dropdown",
-    "dropdown1": "Dropdown 1",
-    "dropdown2": "Dropdown 2",
-    "dropdown3": "Dropdown 3",
-    "dropdown4": "Dropdown 4",
-    "deepDropdown": "Deep Dropdown",
-    "deep1": "Deep Dropdown 1",
-    "deep2": "Deep Dropdown 2",
-    "deep3": "Deep Dropdown 3",
-    "deep4": "Deep Dropdown 4",
-    "deep5": "Deep Dropdown 5"
+    "contact": "Contact"
   },
-
   "hero": {
     "welcome": "Welcome to",
-    "subtitle": "Delivering great food for more than 18 years!",
+    "subtitle": "SIGNATURE BITES, UNFORGETTABLE NIGHT'S",
     "ctaMenu": "Our Menu",
     "ctaBook": "Book a Table",
     "playVideo": "Play Video"
   },
-
   "about": {
-    "title": "Voluptatem dignissimos provident",
+    "title": "SIGNATURE BITES, UNFORGETTABLE NIGHT'S",
     "italic": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
     "bullets": {
       "1": "Ullamco laboris nisi ut aliquip ex ea commodo consequat.",
@@ -48,34 +29,72 @@
     },
     "desc": "Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."
   },
-
   "why": {
     "kicker": "WHY US",
-    "title": "Why Choose Our Restaurant",
+    "title": "Why Choose BESPOKE CUISINE",
     "cards": {
-      "1": { "title": "Lorem Ipsum", "desc": "Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat" },
-      "2": { "title": "Repellat Nihil", "desc": "Dolorem est fugiat occaecati voluptate velit esse. Dicta veritatis dolor quod et vel dire leno para dest" },
-      "3": { "title": "Ad ad velit qui", "desc": "Molestiae officiis omnis illo asperiores. Aut doloribus vitae sunt debitis quo vel nam quis" }
+      "1": {
+        "title": "All Cuisines, Fully Customizable",
+        "desc": "North Indian, South Indian,  Continental,  Mughlai, Street Food, Authentic Desi and more—menus tailored to your taste, spice level, and budget."
+      },
+      "2": {
+        "title": "Fresh Ingredients & Hygienic ",
+        "desc": "We cook fresh for every order with strict hygiene standards, we use quality products and consistent quality—so your guests enjoy every bite."
+      },
+      "3": {
+        "title": "Professional Expertise",
+        "desc": "Expertly managed catering solutions designed specifically for corporate events, ensuring smooth execution and a polished dining experience."
+      }
     }
   },
-
   "menu": {
     "kicker": "Menu",
     "title": "Check Our Tasty Menu",
-    "filters": { "all": "All", "starters": "Starters", "salads": "Salads", "specialty": "Specialty" },
+    "filters": {
+      "all": "All",
+      "starters": "Starters",
+      "salads": "Salads",
+      "specialty": "Specialty"
+    },
     "items": {
-      "lobster_bisque": { "name": "Lobster Bisque", "desc": "Lorem, deren, trataro, filede, nerada" },
-      "bread_barrel": { "name": "Bread Barrel", "desc": "Lorem, deren, trataro, filede, nerada" },
-      "crab_cake": { "name": "Crab Cake", "desc": "A delicate crab cake served on a toasted roll with lettuce and tartar sauce" },
-      "caesar": { "name": "Caesar Selections", "desc": "Lorem, deren, trataro, filede, nerada" },
-      "tuscan_grilled": { "name": "Tuscan Grilled", "desc": "Grilled chicken with provolone, artichoke hearts, and roasted red pesto" },
-      "mozzarella": { "name": "Mozzarella Stick", "desc": "Lorem, deren, trataro, filede, nerada" },
-      "greek_salad": { "name": "Greek Salad", "desc": "Fresh spinach, crisp romaine, tomatoes, and Greek olives" },
-      "spinach_salad": { "name": "Spinach Salad", "desc": "Fresh spinach with mushrooms, hard boiled egg, and warm bacon vinaigrette" },
-      "lobster_roll": { "name": "Lobster Roll", "desc": "Plump lobster meat, mayo and crisp lettuce on a toasted bulky roll" }
+      "lobster_bisque": {
+        "name": "Lobster Bisque",
+        "desc": "Lorem, deren, trataro, filede, nerada"
+      },
+      "bread_barrel": {
+        "name": "Bread Barrel",
+        "desc": "Lorem, deren, trataro, filede, nerada"
+      },
+      "crab_cake": {
+        "name": "Crab Cake",
+        "desc": "A delicate crab cake served on a toasted roll with lettuce and tartar sauce"
+      },
+      "caesar": {
+        "name": "Caesar Selections",
+        "desc": "Lorem, deren, trataro, filede, nerada"
+      },
+      "tuscan_grilled": {
+        "name": "Tuscan Grilled",
+        "desc": "Grilled chicken with provolone, artichoke hearts, and roasted red pesto"
+      },
+      "mozzarella": {
+        "name": "Mozzarella Stick",
+        "desc": "Lorem, deren, trataro, filede, nerada"
+      },
+      "greek_salad": {
+        "name": "Greek Salad",
+        "desc": "Fresh spinach, crisp romaine, tomatoes, and Greek olives"
+      },
+      "spinach_salad": {
+        "name": "Spinach Salad",
+        "desc": "Fresh spinach with mushrooms, hard boiled egg, and warm bacon vinaigrette"
+      },
+      "lobster_roll": {
+        "name": "Lobster Roll",
+        "desc": "Plump lobster meat, mayo and crisp lettuce on a toasted bulky roll"
+      }
     }
   },
-
   "specials": {
     "kicker": "Specials",
     "title": "Check Our Specials",
@@ -114,42 +133,6 @@
       }
     }
   },
-
-  "events": {
-    "items": {
-      "birthday": {
-        "title": "Birthday Parties",
-        "italic": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-        "bullets": {
-          "1": "Ullamco laboris nisi ut aliquip ex ea commodo consequat.",
-          "2": "Duis aute irure dolor in reprehenderit in voluptate velit.",
-          "3": "Ullamco laboris nisi ut aliquip ex ea commodo consequat."
-        },
-        "desc": "Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur"
-      },
-      "private": {
-        "title": "Private Parties",
-        "italic": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-        "bullets": {
-          "1": "Ullamco laboris nisi ut aliquip ex ea commodo consequat.",
-          "2": "Duis aute irure dolor in reprehenderit in voluptate velit.",
-          "3": "Ullamco laboris nisi ut aliquip ex ea commodo consequat."
-        },
-        "desc": "Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur"
-      },
-      "custom": {
-        "title": "Custom Parties",
-        "italic": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-        "bullets": {
-          "1": "Ullamco laboris nisi ut aliquip ex ea commodo consequat.",
-          "2": "Duis aute irure dolor in reprehenderit in voluptate velit.",
-          "3": "Ullamco laboris nisi ut aliquip ex ea commodo consequat."
-        },
-        "desc": "Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur"
-      }
-    }
-  },
-
   "book": {
     "kicker": "RESERVATION",
     "title": "Book a Table",
@@ -166,60 +149,35 @@
       "submit": "Book a Table"
     }
   },
-
-  "testimonials": {
-    "kicker": "Testimonials",
-    "title": "What they're saying about us",
-    "items": {
-      "saul": {
-        "name": "Saul Goodman",
-        "role": "Ceo & Founder",
-        "quote": "Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper."
-      },
-      "sara": {
-        "name": "Sara Wilsson",
-        "role": "Designer",
-        "quote": "Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa."
-      },
-      "jena": {
-        "name": "Jena Karlis",
-        "role": "Store Owner",
-        "quote": "Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim."
-      },
-      "matt": {
-        "name": "Matt Brandon",
-        "role": "Freelancer",
-        "quote": "Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam."
-      },
-      "john": {
-        "name": "John Larson",
-        "role": "Entrepreneur",
-        "quote": "Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid."
-      }
-    }
-  },
-
+  
   "gallery": {
     "kicker": "Gallery",
     "title": "Some photos from Our Restaurant",
     "open": "Open image"
   },
-
   "chefs": {
     "kicker": "Team",
     "title": "Necessitatibus eius consequatur",
     "items": {
-      "walter": { "name": "Walter White", "role": "Master Chef" },
-      "sarah": { "name": "Sarah Jhonson", "role": "Patissier" },
-      "william": { "name": "William Anderson", "role": "Cook" }
+      "walter": {
+        "name": "Walter White",
+        "role": "Master Chef"
+      },
+      "sarah": {
+        "name": "Sarah Jhonson",
+        "role": "Patissier"
+      },
+      "william": {
+        "name": "William Anderson",
+        "role": "Cook"
+      }
     }
   },
-
   "contact": {
     "kicker": "Contact",
     "title": "Contact Us",
     "locationTitle": "Location",
-    "locationValue": "A108 Adam Street, New York, NY 535022",
+    "locationValue": "Shani Dham Chattarpur, Delhi India",
     "hoursTitle": "Open Hours",
     "hoursLine1": "Monday-Saturday:",
     "hoursLine2": "11:00 AM - 2300 PM",
@@ -235,10 +193,9 @@
       "submit": "Send Message"
     }
   },
-
   "footer": {
-    "addressLine1": "A108 Adam Street",
-    "addressLine2": "New York, NY 535022",
+    "addressLine1": "Shani Dham Chattarpur",
+    "addressLine2": "Delhi, India",
     "phoneLabel": "Phone:",
     "emailLabel": "Email:",
     "usefulLinks": "Useful Links",
@@ -258,7 +215,6 @@
     "credits": "Designed by BootstrapMade",
     "starterPage": "Starter Page"
   },
-
   "starter": {
     "pageTitle": "Starter Page",
     "pageDesc": "Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam molestias.",
