--- a/src/i18n/locales/hi/common.json
+++ b/src/i18n/locales/hi/common.json
@@ -65,14 +65,63 @@
     "filters": { "all": "सब", "starters": "स्टार्टर", "salads": "सलाद", "specialty": "स्पेशल" },
     "items": {
       "lobster_bisque": { "name": "Lobster Bisque", "desc": "Lorem, deren, trataro, filede, nerada" },
+      "grilled_snacks": { "name": "Grilled Snacks", "desc": "Delicious snacks grilled to perfection" },
+      "tandoor_snacks": { "name": "Tandoor Snacks", "desc": "Authentic tandoor-baked appetizers" },
+      "fried_snacks": { "name": "Fried Snacks", "desc": "Crispy fried snacks with various flavors" },
+      "spicy_snacks": { "name": "Spicy Snacks", "desc": "Hot and spicy snack options" },
+      "dairy_snacks": { "name": "Dairy Snacks", "desc": "Creamy dairy-based appetizers" },
+      "conti_snacks": { "name": "Conti Snacks", "desc": "Continental-style snack selections" },
       "bread_barrel": { "name": "Bread Barrel", "desc": "Lorem, deren, trataro, filede, nerada" },
       "crab_cake": { "name": "Crab Cake", "desc": "A delicate crab cake served on a toasted roll with lettuce and tartar sauce" },
       "caesar": { "name": "Caesar Selections", "desc": "Lorem, deren, trataro, filede, nerada" },
+      "north_indian_classics": { "name": "North Indian Classics", "desc": "Traditional North Indian dishes with rich flavors and spices" },
+      "rajasthani_delights": { "name": "Rajasthani Delights", "desc": "Authentic Rajasthani cuisine featuring royal flavors" },
+      "taste_of_uttar_pradesh": { "name": "Taste of Uttar Pradesh", "desc": "Delicious dishes from Uttar Pradesh with unique regional tastes" },
+      "flavours_of_bihar": { "name": "Flavours of Bihar", "desc": "Traditional Bihari cuisine with distinctive spices" },
+      "punjabi_special": { "name": "Punjabi Special", "desc": "Rich and flavorful Punjabi dishes" },
       "tuscan_grilled": { "name": "Tuscan Grilled", "desc": "Grilled chicken with provolone, artichoke hearts, and roasted red pesto" },
+      "traditional_indian": { "name": "Traditional Indian", "desc": "Classic Indian desserts with rich flavors" },
+      "kheers": { "name": "Kheers", "desc": "Creamy rice pudding with nuts and saffron" },
+      "halwas": { "name": "Halwas", "desc": "Sweet and dense Indian confectionery" },
+      "cold_desserts": { "name": "Cold Desserts", "desc": "Refreshing chilled desserts" },
+      "western_desserts": { "name": "Western Desserts", "desc": "Classic Western-style sweet treats" },
+      "live_desserts": { "name": "Live Desserts", "desc": "Desserts prepared live in front of you" },
       "mozzarella": { "name": "Mozzarella Stick", "desc": "Lorem, deren, trataro, filede, nerada" },
+      
+      "imported": { "name": "Imported", "desc": "Imported ingredients in fresh preparations" },
+      "fruit_shakes": { "name": "Fruit Shakes", "desc": "Refreshing fruit-based shakes" },
+      "mojito": { "name": "Mojito", "desc": "Classic mojito with fresh mint and lime" },
+      "fruit_juice": { "name": "Fruit Juice", "desc": "Freshly squeezed fruit juices" },
       "greek_salad": { "name": "Greek Salad", "desc": "Fresh spinach, crisp romaine, tomatoes, and Greek olives" },
       "spinach_salad": { "name": "Spinach Salad", "desc": "Fresh spinach with mushrooms, hard boiled egg, and warm bacon vinaigrette" },
-      "lobster_roll": { "name": "Lobster Roll", "desc": "Plump lobster meat, mayo and crisp lettuce on a toasted bulky roll" }
+      "tomato_basil_shorba": { "name": "Tomato Basil Shorba", "desc": "Aromatic tomato soup with fresh basil" },
+      "lemon_coriander_soup": { "name": "Lemon Coriander Soup", "desc": "Refreshing soup with lemon and coriander flavors" },
+      "khou_suey": { "name": "Khou Suey", "desc": "Burmese coconut curry noodle soup" },
+      "veg_manchow_soup": { "name": "Veg Manchow Soup", "desc": "Spicy vegetable soup with noodles and mushrooms" },
+      "indian": { "name": "Indian", "desc": "Traditional Indian soups with authentic flavors" },
+      "green_leaves": { "name": "Green Leaves", "desc": "Nutritious soups made with fresh green vegetables" },
+      "add_ons": { "name": "Add Ons", "desc": "Additional ingredients to enhance your soup" },
+      "continental": { "name": "Continental", "desc": "European-style soups with refined tastes" },
+      "lobster_roll": { "name": "Lobster Roll", "desc": "Plump lobster meat, mayo and crisp lettuce on a toasted bulky roll" },
+      "tawa_paratha_live": { "name": "Tawa Paratha Live", "desc": "Freshly cooked paratha on tawa with live preparation" },
+      "breads": { "name": "Breads", "desc": "Assortment of freshly baked breads" },
+      "rice": { "name": "Rice", "desc": "Aromatic and flavorful rice dishes" },
+      "dimsum": { "name": "Dimsum", "desc": "Steamed dumplings filled with savory meats and vegetables" },
+      "sushi": { "name": "Sushi", "desc": "Fresh sushi rolls with rice, seaweed, and assorted fillings" },
+      "pizza": { "name": "Pizza", "desc": "Wood-fired pizza with fresh toppings and melted cheese" },
+      "avocado_bar": { "name": "Avocado Bar", "desc": "Fresh avocado preparations with various seasonings and accompaniments" },
+      "shawarma": { "name": "Shawarma", "desc": "Marinated meat slowly roasted and served with pita and sauces" },
+      "pasta": { "name": "Pasta", "desc": "Homemade pasta with rich sauces and fresh ingredients" },
+      "delhi_chaat": { "name": "Delhi Chaat", "desc": "Traditional Delhi street food with tangy and spicy flavors" },
+      "kolkata_chaat": { "name": "Kolkata Chaat", "desc": "Bengali style chaat with unique spices and ingredients" },
+      "fusion_chaat": { "name": "Fusion Chaat", "desc": "Creative blend of Indian and international flavors" },
+      "continental_chaat": { "name": "Continental Chaat", "desc": "Western-inspired chaat with a modern twist" },
+      "health_conscious_chaat": { "name": "Health Conscious Chaat", "desc": "Nutritious chaat made with healthy ingredients" },
+      "millet_chaat": { "name": "Millet Chaat", "desc": "Wholesome chaat prepared with millets and fresh veggies" },
+      "idli_dosa": { "name": "इडली और डोसा", "desc": "उपमा और चटनी के साथ भाप से पकाए गए चावल के केक और कुरकुरी किण्वित क्रेप" },
+      "vada": { "name": "वड़ा", "desc": "नारियल चटनी और सांबर के साथ कुरकुरी दाल के फ्रिटर" },
+      "sambar": { "name": "सांबर", "desc": "तेज पत्तेदार दाल स्टू जिसमें सब्जियां और सुगंधित मसाले" },
+      "rasam": { "name": "रसम", "desc": "तेज पत्तेदार दक्षिण भारतीय सूप जिसमें इमली और काली मिर्च" }
     }
   },
 
